fix the header form overflow issue

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -196,10 +196,6 @@ footer {
   .tablet-hidden {
     display: none;
   }
-
-  .nav-form {
-    width: 70%;
-  }
 }
 
 @media screen and (max-width: 768px) {
